--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     container_name: hadoop
     restart: always
     hostname: localhost
+    volumes:
+      - ./workfiles:/workfiles
     ports:
       - '8042:8042'
       - '8088:8088'
@@ -22,3 +24,4 @@ services:
       IS_DATA_NODE: 'true'
       IS_RESOURCE_MANAGER: 'true'
       CLUSTER_NODES: hadoop
+
